syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "ChannelServiceProto";

service ChannelService {
  rpc GetChannelPreviewsByIds (ChannelIdList) returns (ChannelPreviewList);
  rpc GetChannelByUserId (UserIdRequest) returns (ChannelResponse);
}

message ChannelIdList {
  repeated string ids = 1;
}

message ChannelPreview {
  string channelId = 1;
  string name = 2;
  string playbackUrl = 3;
  string avatarUrl = 4;
}

message ChannelPreviewList {
  repeated ChannelPreview previews = 1;
}

message UserIdRequest {
  int64 userId = 1;
}

message ChannelResponse {
  string channelId = 1;
  string name = 2;
  string playbackUrl = 3;
  string avatarUrl = 4;
}
